Revert "Increase no-gap-breakpoint by 32px to fix overflow (#31889)"
This reverts commit d2f907507857fb0d256c45dda34403ae1fe95cd8.

--- a/app/javascript/styles/mastodon/variables.scss
+++ b/app/javascript/styles/mastodon/variables.scss
@@ -87,7 +87,7 @@ $media-modal-media-max-width: 100%;
 // put margins on top and bottom of image to avoid the screen covered by image.
 $media-modal-media-max-height: 80%;
 
-$no-gap-breakpoint: 1207px;
+$no-gap-breakpoint: 1175px;
 $mobile-breakpoint: 630px;
 
 $font-sans-serif: 'mastodon-font-sans-serif' !default;
